Login page alignment issues corrected and styled

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -168,6 +168,10 @@ button .call-to-action-button {
   margin-top: 50px;
 }
 
+.login-margin-fix {
+  margin-bottom: -5px;
+}
+
 /* == MOTHER REQUESTS PAGE == */
 
 /* container box */
